# src/main/java/com/brad/pms/controller/WorkbenchController.java
@@ -1,0 +1,25 @@
+package com.brad.pms.controller;
+
+import com.brad.pms.common.response.ResponseResult;
+import com.brad.pms.dto.response.WorkbenchDTO;
+import com.brad.pms.security.PermissionCode;
+import com.brad.pms.security.RequirePermission;
+import com.brad.pms.service.WorkbenchService;
+import lombok.RequiredArgsConstructor;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+@RestController
+@RequestMapping("/workbench")
+@RequiredArgsConstructor
+public class WorkbenchController {
+
+    private final WorkbenchService workbenchService;
+
+    @GetMapping
+    @RequirePermission(PermissionCode.PROJECT_READ)
+    public ResponseResult<WorkbenchDTO> current() {
+        return ResponseResult.success(workbenchService.load());
+    }
+}
